styles.css
body {
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    height: 100vh;
    align-items: center;
}

/* Piano Container */ 
#piano {
    height: 290px;
    padding: 90px 30px 0 30px;
    background-color: #add8e6;
    border-radius: 10px;
}

/* Keybed */
.keys {
    position: relative;
}

/* White Keys */
.white-keys {
    display: flex;
}

.white-key {
    width: 68px;
    height: 280px;
    background-color: #fff;
    border-radius: 0 0 5px 5px;
    border: solid #000 2px;
    box-sizing: border-box;
}

/* Black Keys */
.black-keys {
    position: relative;
    display: flex;
}

.black-key {
    width: 38px;
    height: 160px;
    border-radius: 0 0 5px 5px;
    box-sizing: border-box;
    position: absolute;
    background-color: #000;
}

/* The hard part - aligning the black keys so it looks like a piano */
.black-key:nth-child(1) {
    left: 48px;
}

.black-key:nth-child(2) {
    left: 117px;
}

.black-key:nth-child(3) {
    left: 253px;
}

.black-key:nth-child(4) {
    left: 320px;
}

.black-key:nth-child(5) {
    left: 389px;
}

.black-key:nth-child(6) {
    left: 525px;
}

.black-key:nth-child(7) {
    left: 594px;
}

.black-key:nth-child(8) {
    left: 662px;
}

.black-key:nth-child(9) {
    left: 797px;
}

.black-key:nth-child(10) {
    left: 865px;
}

